# AATable

./: CHANGELOG.md  README-ja.md  README.md  aacalibrate.py  aafixwidth.py  aatable.py  mmd2ge.py  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture-ja.md  architecture.md  getting-started-ja.md  getting-started.md  scripts-ja.md  scripts.md
spec/: SPEC.md
tests/: test_display_width.py  test_grapheme_clusters.py  test_pad_to_width.py  test_parse_md_table.py  test_render_aa_table.py
